--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     	name="viewport"
     	content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
     />
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 </head>
 
 <body>
