--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Portrayal</title>
+	<title>StoryMaker</title>
 	<meta charset="UTF-8" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta
@@ -10,6 +10,7 @@
     	content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
     />
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
